<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SpecificComponentActivity"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/tvProizvod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/proizvod"
        android:layout_marginTop="10sp"/>

    <TextView
        android:id="@+id/tvProizvodacKodirano"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/proizvodac"
        android:layout_marginTop="30sp"
        android:layout_marginStart="15sp"
        android:layout_below="@+id/tvProizvod"/>

    <TextView
        android:id="@+id/tvProizvodac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/proizvodac"
        android:layout_marginTop="30sp"
        android:layout_marginStart="20sp"
        android:layout_below="@+id/tvProizvod"
        android:layout_toEndOf="@+id/tvProizvodacKodirano"/>

    <TextView
        android:id="@+id/tvModelKodirano"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/model"
        android:layout_marginTop="40sp"
        android:layout_marginStart="15sp"
        android:layout_below="@+id/tvProizvodac"/>

    <TextView
        android:id="@+id/tvModel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/model"
        android:layout_marginTop="40sp"
        android:layout_marginStart="20sp"
        android:layout_below="@+id/tvProizvodac"
        android:layout_toEndOf="@+id/tvModelKodirano"/>

    <TextView
        android:id="@+id/tvSpecifikacijeKodirano"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/specifikacije"
        android:layout_marginTop="40sp"
        android:layout_marginStart="15sp"
        android:layout_below="@+id/tvModelKodirano"/>

    <TextView
        android:id="@+id/tvSpecifikacije"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/specifikacije"
        android:autoLink="web"
        android:textColorLink="@color/black"
        android:layout_marginTop="20sp"
        android:layout_marginStart="20sp"
        android:layout_below="@+id/tvSpecifikacijeKodirano" />

    <TextView
        android:id="@+id/tvDomacaPonuda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:gravity="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/domacaPonuda"
        android:layout_marginTop="60sp"
        android:layout_marginStart="15sp"
        android:layout_below="@+id/tvSpecifikacije"/>

    <LinearLayout
        android:id="@+id/LinLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvDomacaPonuda"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnJeftinije"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30sp"
            android:layout_marginTop="40sp"
            android:layout_marginBottom="20sp"
            android:backgroundTint="@color/grey"
            android:text="@string/jeftinije"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btnNabava"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60sp"
            android:layout_marginTop="40sp"
            android:layout_marginEnd="30sp"
            android:layout_marginBottom="20sp"
            android:backgroundTint="@color/grey"
            android:text="@string/nabava"
            android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center|bottom"
        android:layout_below="@+id/LinLayout">

        <Button
            android:id="@+id/btnFavorit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/grey"
            android:text="@string/favorit"
            android:textColor="@color/black"/>

    </LinearLayout>
</RelativeLayout>